# ImMimic

./: .gitignore  README.md  pyproject.toml  requirements.txt
robomimic/robomimic/algo/: algo.py  diffusion_policy.py
robomimic/robomimic/config/: base_config.py  diffusion_policy_config.py
robomimic/robomimic/datasets/utils/: compute_action_stats.py
robomimic/robomimic/envs/: env_base.py  env_ig_momart.py  env_real_panda_gello.py  env_robosuite.py
robomimic/robomimic/exps/configs/: umi_pick_place_100_5.json
robomimic/robomimic/models/: base_nets.py  obs_nets.py
robomimic/robomimic/scripts/: dataset_states_to_obs.py  run_trained_policy.py  train.py
robomimic/robomimic/utils/: dataset.py  env_utils.py  file_utils.py  obs_utils.py  tensor_utils.py  train_utils.py
