[project]
name = "immimic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.1",
    "aiosignal==1.4.0",
    "anyio==4.11.0",
    "async-timeout==5.0.1",
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "cython==0.29.37",
    "datasets==4.3.0",
    "diffusers==0.11.1",
    "dill==0.4.0",
    "dtaidistance==2.3.13",
    "etils==1.12.2",
    "evdev==1.9.1",
    "exceptiongroup==1.3.0",
    "fastdtw==0.3.4",
    "fasteners==0.19",
    "filelock==3.20.0",
    "fonttools==4.56.0",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "gdown==5.2.0",
    "glfw==2.8.0",
    "grpcio==1.71.0",
    "h5py==3.13.0",
    "hf-xet==1.2.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.0.0",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "llvmlite==0.44.0",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "mink==0.0.5",
    "mpmath==1.3.0",
    "mujoco==3.3.0",
    "multidict==6.7.0",
    "multiprocess==0.70.16",
    "networkx==3.4.2",
    "numba==0.61.0",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "pot==0.9.5",
    "prettytable==3.15.1",
    "propcache==0.4.1",
    "protobuf==6.30.1",
    "psutil==7.0.0",
    "pycparser==2.22",
    "pynput==1.8.0",
    "pyopengl==3.1.9",
    "pyparsing==3.2.1",
    "pysocks==1.7.1",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-xlib==0.33",
    "pyyaml==6.0.2",
    "qpsolvers==4.5.0",
    "quadprog==0.1.13",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scipy==1.15.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sympy==1.13.1",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorboardx==2.6.2.2",
    "termcolor==2.5.0",
    "tokenizers==0.21.1",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "typer-slim==0.20.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.21.0",
]
